December 2022 second commit

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="FPI"></div>
                         </div>
                 </div>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9HFlJvEkdkYFeN534FpADUM1uSPEKWDPtPKOC61t3yJ9cEw/viewform?embedded=true" width="640" height="785" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe9HFlJvEkdkYFeN534FpADUM1uSPEKWDPtPKOC61t3yJ9cEw/viewform?embedded=true" width="640" height="785" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe> -->
                 </div>
         </div>
     </div>
